added heer2008 to related work

--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -737,6 +737,8 @@ In diesem Abschnitt wurden verschiedene Ansätze vorgestellt, mit denen Kommenta
 
 Dieser Abschnitt befasst sich mit verschiedenen Ansätzen zur User Assistance, welche die Anforderungen Verständnis, Vollständigkeit oder Unaufdringlichkeit betrifft. Dazu zählen notwendige Funktionen des Hilfesystems, mögliche Fragestellungen des Nutzers oder Interaktionskonzepte.
 
+Heer et al. \cite{Heer2008} entwickelten eine grafische History für Tableau, welche Undo und Redo erleichtern soll. Sie enthält Screenshots des Visualisierungszustands, die chronologisch wie eine Timeline angeordnet sind. Dieses Konzept trägt zur \emph{Verständlichkeit} der Anwendung bei. 
+
 Lim und Dey \cite{Lim2010} kategorisieren mögliche Fragestellungen von Nutzern in kontextadaptiven Anwendungen. Dabei ändert die Anwendung abhängig vom Nutzer- bzw. Nutzungskontext ihren Zustand (z.\,B. schaltet Smartphone auf lautlos) und der Benutzer will wissen, warum (z.\,B. weil er Abends in der Oper ist). Grundlage für Lims Ausführungen ist die Annahme, dass der Nutzer nur eingeschränkt Einfluss auf die Arbeitsweise des Systems hat, etwa durch Hinzufügen eigener Regeln. Das ist im letzten Schritt des VizBoard Workflows nicht gegeben, da der Benutzer die Visualisierungskomponenten selbst ausgewählt hat. Die Fragestellungen könnten aber hilfreich sein, wenn es um die Komponenten selbst geht (\enquote{Warum werden gerade diese Daten angezeigt?}) und so die \emph{Verständlichkeit} und \emph{Vollständigkeit} erhöhen.
 
 Cao et al. \cite{Cao2010} untersuchten mit Hilfe der Thinking Aloud Methode \cite{vanSomeren1994} das Verhalten von Endnutzern, wenn sie Mashups erstellen, sowie deren Debugging-Strategien, wenn etwas nicht funktioniert. Dazu benutzten sie das inzwischen eingestellte Microsoft Popfly. In ihrer Studie hatten alle Probanden Probleme mit dem Konzept des Datenflusses, also welche Daten wann zwischen welchen Komponenten ausgetauscht werden. Ebenfalls mit Mashup Debugging beschäftigten sich Kuttal et al. \cite{Kuttal2013}. Sie entwickelten ein System zur automatischen Fehlererkennung in Yahoo Pipes. In den danach erarbeiteten Designrichtlinien schlagen sie unter anderem vor, keine technische Begriffe zu verwenden und Undo-Möglichkeiten sowie kontextuelle Hilfe anzubieten.
