--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -1275,8 +1275,7 @@ Bezüglich der letzten Anforderung bietet sich ein Memento-Pattern \cite{Gamma19
 Without violating encapsulation, capture and externalize an object's internal state allowing the object to be restored to this state later.
 \end{quote} 
 
-% memento
-Dazu werden zwei Methoden \texttt{getMemento()} und \texttt{setMemento(m)} zur API der Komponente hinzugefügt, mit denen das Hilfesystem den Zustand der Komponente speichern und wiederherstellen kann. Eine andere Möglichkeit wäre das Format des Mementos -- also welche Properties es ausmachen -- in der Komponentenbeschreibung anzugeben. Das Hilfesystem könnte die Werte dieser Properties bei der Wiederherstellung des Zustands mit Hilfe der entsprechenden Setter-Methode setzen. Diese Variante hat aber den Nachteil, dass PropertyLinks (Abschnitt~\ref{section:standderforschung:grundlagen:cruise_vizboard}) darauf registriert sein können. Sie könnten in anderen Komponenten unerwünschte Aktionen ausführen, während der Zustand der Komponente für Kommentare zurückgesetzt wird. Deswegen wird das Memento insofern von Properties unabhängig gemacht, dass \texttt{setMemento(m)} im Gegensatz zu \texttt{setProperty(k,v)} kein \enquote{propertyChanged} Event feuert und PropertyLinks davon nicht betroffen werden.
+Um Mementos umzusetzen, wird auf Properties zurückgegriffen. Eine Komponente muss ihren Zustand als Properties öffentlich machen und zwar so, dass durch Ändern von Properties kein inkonsistenter Zustand erreicht werden kann. Sie definiert das Format ihres Mementos, also welche Properties es ausmachen, in der Komponentenbeschreibung. Das Hilfesystem kann dann über die Methoden \texttt{getProperty(p)} und \texttt{setProperty(p,v)}, welche schon in der API der Komponente vorhanden sind, das Memento abrufen bzw. wiederherstellen. Dabei werden eventuell registrierte PropertyLinks (Abschnitt~\ref{section:standderforschung:grundlagen:cruise_vizboard}) aktiviert und andere Komponenten ebenfalls entsprechend verändert.
 
 \subsubsection{Ortsbezogene Bereichskommentare}
 
@@ -1590,6 +1589,7 @@ Für das Konzept wurde das Markup einer Komponente, die Komponentenbeschreibung 
 \subsubsection{Komponentenbeschreibung}
 
 \begin{itemize}
+	\item Welche Properties das Memento ausmachen (Kommentare, History)
 	\item VISO Operationen, welche eine Aktion ausführen (Bedienung)
 	\item CSS Selektoren für jede Operation, um UI Elemente für Operation zu kennzeichnen (Bedienung)
 	\item Konzept, welches Aktion näher beschreibt (Verlinkung)
@@ -1609,8 +1609,6 @@ Für das Konzept wurde das Markup einer Komponente, die Komponentenbeschreibung 
 \begin{itemize}
 	\item Eine Methode, um Koordinaten in Datenpunkte umzurechnen (Kommentare)
 	\item Die Umkehrung der Methode (Datenpunkte $\to$ Koordinaten) (Kommentare)
-	\item Eine Methode, um Werte von Attributen eines Datenpunkts zu erhalten (Kommentare)
-	\item Zwei Methoden, um ein Memento der Komponente auslesen und wiederherstellen zu können (Kommentare)
 \end{itemize}
 
 \subsubsection{VISO}
