--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -1532,7 +1532,7 @@ Der Ablauf ist wie folgt:
 	\item Der Benutzer profitiert von der Hilfe.
 \end{enumerate}
 
-Nun stellt sich die Frage, welche Daten für das maschinelle Lernen herangezogen werden sollen, d.\,h. wie der Feature Vector aussieht. Hier ist zu beachten, dass verschachtelte Attribute wie Arrays oder Mengen nicht zulässig sind. Um dem beizukommen werden Nutzerinteraktionen in Zyklen von 5 unterteilt. Da Mengen  Es erscheint sinnvoll folgende Informationen zu erfassen:
+Nun stellt sich die Frage, welche Daten für das maschinelle Lernen herangezogen werden sollen, d.\,h. wie der Feature Vector aussieht. Hier ist zu beachten, dass verschachtelte Attribute wie Arrays oder Mengen nicht zulässig sind. Um dem beizukommen werden Nutzerinteraktionen in Zyklen von 5 unterteilt. Es erscheint sinnvoll folgende Informationen zu erfassen:
 
 \begin{itemize}
 	\item Alter, Geschlecht, Domäne und Ort des Benutzers
